tests/rascal/negative/type_errors/L1/12_expression_ES10_D4_69.ob
MODULE Test12;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := ((- ((y DIV y) - (1223 MOD x))) MOD (- (- (+ 1))));
  (* error *)  p := (~ (((q - y) - (200 - 1)) >= (+ (- y))));
               q := ((+ (- (200 MOD 2))) < (- (+ (y + 2))));
               z := (- (((200 - y) + (z DIV y)) * ((200 - x) + (x - z))));
               q := ((((0 MOD 1223) DIV (200 DIV 1)) - ((2 MOD x) + (200 - 2))) = (+ (- (1223 + 200))));
               p := ((((y DIV 1223) + (- 2)) DIV ((0 + 200) + (- z))) < (((1 + 2) - (1223 - y)) * ((+ 1) - (x DIV 2))));
               p := ((((y * y) * (x - 2)) # ((x DIV y) * (2 MOD 2))) OR ((+ (- 2)) < (+ (+ 2))));
               x := ((- ((1223 - z) - (1 - x))) MOD (((1 DIV 200) * (200 MOD x)) * (- (- 2))));
               q := (((+ (z MOD 2)) + ((- 200) * (1 - 1))) <= (((z MOD 2) * (x - z)) - ((1223 MOD z) DIV (1 - 1))));
               y := ((((- 1223) + (+ y)) MOD ((x MOD z) DIV (z * 1))) + (((1 DIV x) MOD (1223 MOD x)) MOD ((1 * 0) - (+ 1223))))
END Test12.